# CRUSTy

./: CRUSTy_Training_Guide.md  Cargo.toml  Modelfile  OLLAMA_OPTIMIZATION_GUIDE.md  README.md  USAGE.md  build.rs  compare_models.py  create_optimized_model.py  sonar-project.properties  stream_response.py  test_ollama.py  test_ollama_simple.py
.github/workflows/: sonarcloud.yml
Documentation/: CRUSTy_Memory_System.md  CRUSTy_Training_Guide.md  DEV_ENVIRONMENT_SETUP.md  EMBEDDED_SYSTEMS.md  OLLAMA_OPTIMIZATION_GUIDE.md  RUST_FFI_EMBEDDED.md  USAGE.md
screenshots/: README.txt
scripts/ollama/: test_ollama_params.py  test_ollama_timeout.py
src/: backend.rs  backend_embedded.rs  backend_local.rs  encryption.rs  gui.rs  gui.rs.bak  gui.rs.bak2  gui.rs.old  gui_impl.rs  logger.rs  main.rs  split_key.rs  split_key_gui.rs  start_operation.rs  test_transfer.rs  transfer_gui.rs
src/gui/: action_bar.rs  actions.rs  app_core.rs  app_state.rs  file_list.rs  mod.rs  theme.rs  utils.rs
src/gui/screens/: about.rs  dashboard.rs  decrypt.rs  encrypt.rs  key_mgmt.rs  logs.rs  main_screen.rs  mod.rs  workflow.rs
